# FlashBEV

./: .gitignore  LICENSE  README.md  plot_height_scaling_normalized.py  pyproject.toml  requirements.txt
flashbev/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
flashbev/flashbevpool/: __init__.py  bevpoolv2.py  flash_bevpool.py  sampling_vt.py  sampling_vt_ops.py
flashbev/flashbevpool/src/: bevpoolv2.cpp  bevpoolv2_cuda.cu  flash_bevpool.cpp  flash_bevpool_cuda.cu  sampling_vt.cpp  sampling_vt_cuda.cu
inputs/: calib_nuscenes.json
tools/: benchmark.py  calculate_flops.py  calculate_memory.py  evaluate_differences.py  plot_latency.py  profile_differences.py  profile_latency.py
tools/config/: config.yaml
tools/utils/: __init__.py  benchmark_utils.py  config.py  data_utils.py  flop_utils.py  plotting.py  transformer_utils.py
